--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(/Users/billiegray/Sites/blllle.github.io/node_modules/normalize.css/normalize.css);
+@import url(/Users/TravsMac/Sites/blllle.github.io/node_modules/normalize.css/normalize.css);
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 18px;
@@ -121,6 +121,7 @@ nav img {
 .hover {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
+  cursor: pointer;
 }
 
 .front:hover .back {
@@ -167,20 +168,12 @@ footer a {
   width: 120px;
 }
 
-.about-page footer {
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  -webkit-transform: translate(-50%);
-          transform: translate(-50%);
-}
-
 .about-content {
   padding: 50px;
   max-width: 550px;
   color: #f6a79a;
   text-align: center;
-  margin: 25vh auto;
+  margin: 20vh auto;
 }
 
 .about-content a {
@@ -204,294 +197,15 @@ footer a {
     cursor: pointer;
   }
   .about-page nav img {
-    width: 90px;
+    width: 80px;
   }
   .logo img {
     width: 210px;
   }
   .about-content {
-    margin: 25vh auto 0px;
+    margin: 20vh auto 0px;
   }
 }
 
 /* Colors */
-.front-1 {
-  background-color: #d8f9f8;
-  color: #549492;
-}
-
-.front-1 .back {
-  color: #d8f9f8;
-  background-color: #549492;
-}
-
-.front-2 {
-  background-color: #ffc2b3;
-  color: #cb6b52;
-}
-
-.front-2 .back {
-  color: #ffc2b3;
-  background-color: #cb6b52;
-}
-
-.front-3 {
-  background-color: #8d9fcc;
-  color: #213873;
-}
-
-.front-3 .back {
-  color: #8d9fcc;
-  background-color: #213873;
-}
-
-.front-4 {
-  background-color: #fffcde;
-  color: #ffe019;
-}
-
-.front-4 .back {
-  color: #fffcde;
-  background-color: #ffe019;
-}
-
-.front-5 {
-  background-color: #d5cdf1;
-  color: #7263a6;
-}
-
-.front-5 .back {
-  color: #d5cdf1;
-  background-color: #7263a6;
-}
-
-.front-6 {
-  background-color: #c1e6d0;
-  color: #6b997e;
-}
-
-.front-6 .back {
-  color: #c1e6d0;
-  background-color: #6b997e;
-}
-
-.front-7 {
-  background-color: #99d5ff;
-  color: #45a3e6;
-}
-
-.front-7 .back {
-  color: #99d5ff;
-  background-color: #45a3e6;
-}
-
-.front-8 {
-  background-color: #ffd4d5;
-  color: #cf6e72;
-}
-
-.front-8 .back {
-  color: #ffd4d5;
-  background-color: #cf6e72;
-}
-
-.front-9 {
-  background-color: #fbdcb6;
-  color: #e09a43;
-}
-
-.front-9 .back {
-  color: #fbdcb6;
-  background-color: #e09a43;
-}
-
-.front-10 {
-  background-color: #dac3b6;
-  color: #a66a47;
-}
-
-.front-10 .back {
-  color: #dac3b6;
-  background-color: #a66a47;
-}
-
-.front-11 {
-  background-color: #e3bfcb;
-  color: #966072;
-}
-
-.front-11 .back {
-  color: #e3bfcb;
-  background-color: #966072;
-}
-
-.front-12 {
-  background-color: #89c69a;
-  color: #3d7b4e;
-}
-
-.front-12 .back {
-  color: #89c69a;
-  background-color: #3d7b4e;
-}
-
-.front-13 {
-  background-color: #7db1b3;
-  color: #1f6266;
-}
-
-.front-13 .back {
-  color: #7db1b3;
-  background-color: #1f6266;
-}
-
-.front-14 {
-  background-color: #bfe6ff;
-  color: #6b8799;
-}
-
-.front-14 .back {
-  color: #bfe6ff;
-  background-color: #6b8799;
-}
-
-.front-15 {
-  background-color: #fcaf97;
-  color: #b36e59;
-}
-
-.front-15 .back {
-  color: #fcaf97;
-  background-color: #b36e59;
-}
-
-.front-16 {
-  background-color: #c4cee2;
-  color: #6d727d;
-}
-
-.front-16 .back {
-  color: #c4cee2;
-  background-color: #6d727d;
-}
-
-.front-17 {
-  background-color: #ffaea2;
-  color: #c26253;
-}
-
-.front-17 .back {
-  color: #ffaea2;
-  background-color: #c26253;
-}
-
-.front-18 {
-  background-color: #ffe7a6;
-  color: #e6c670;
-}
-
-.front-18 .back {
-  color: #ffe7a6;
-  background-color: #e6c670;
-}
-
-.front-19 {
-  background-color: #cedadd;
-  color: #607378;
-}
-
-.front-19 .back {
-  color: #cedadd;
-  background-color: #607378;
-}
-
-.front-20 {
-  background-color: #fadede;
-  color: #e6968c;
-}
-
-.front-20 .back {
-  color: #fadede;
-  background-color: #e6968c;
-}
-
-.front-21 {
-  background-color: #abcaef;
-  color: #254a94;
-}
-
-.front-21 .back {
-  color: #abcaef;
-  background-color: #254a94;
-}
-
-.front-22 {
-  background-color: #bae1db;
-  color: #598d85;
-}
-
-.front-22 .back {
-  color: #bae1db;
-  background-color: #598d85;
-}
-
-.front-23 {
-  background-color: #ffd6bd;
-  color: #d88e5f;
-}
-
-.front-23 .back {
-  color: #ffd6bd;
-  background-color: #d88e5f;
-}
-
-.front-24 {
-  background-color: #cc8f9c;
-  color: #a84354;
-}
-
-.front-24 .back {
-  color: #cc8f9c;
-  background-color: #a84354;
-}
-
-.front-25 {
-  background-color: #fcf0cc;
-  color: #fdbd02;
-}
-
-.front-25 .back {
-  color: #fcf0cc;
-  background-color: #fdbd02;
-}
-
-.front-26 {
-  background-color: #f4eaed;
-  color: #b9a2a9;
-}
-
-.front-26 .back {
-  color: #f4eaed;
-  background-color: #b9a2a9;
-}
-
-.front-27 {
-  background-color: #a8afe7;
-  color: #6b73ab;
-}
-
-.front-27 .back {
-  color: #a8afe7;
-  background-color: #6b73ab;
-}
-
-.front-28 {
-  background-color: #e7ccc6;
-  color: #b3948d;
-}
-
-.front-28 .back {
-  color: #e7ccc6;
-  background-color: #b3948d;
-}
 /*# sourceMappingURL=style.css.map */
