--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,5 @@
 @import "../node_modules/normalize.css/normalize.css";
-
 // Colours:
-
 // $light-sea: #d8f9f8;
 // $sea: #36968d;
 // $dark-salmon: #cb6b52;
@@ -50,7 +48,6 @@
 // $dirt-dusk: #cc9c3f;
 // $pink-dust: #e3afa9;
 // $dust-pink: #c6701f;
-
 $light-teal: #d8f9f8;
 $dark-teal: #549492;
 $light-salmone: #ffc2b3;
@@ -108,10 +105,8 @@ $dark-perrywikle: #6b73ab;
 $light-mushroom: #e7ccc6;
 $mushroom: #b3948d;
 $note-grey: #888d9c;
-
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 18px;
   line-height: 1.5;
   background-color: #ffffff;
@@ -173,10 +168,8 @@ nav img {
   height: 250px;
   padding: 20px;
   border-radius: 10px 10px 10px 10px;
-  box-shadow: 0px 0px 51px 0px rgba(0, 0, 0, 0.2),
-    0px 6px 18px 0px rgba(0, 0, 0, 0.05);
-  transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 0.35s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease;
+  box-shadow: 0px 0px 51px 0px rgba(0, 0, 0, 0.2), 0px 6px 18px 0px rgba(0, 0, 0, 0.05);
+  transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.35s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease;
   transform: translateY(0px);
 }
 
@@ -201,16 +194,17 @@ nav img {
   }
 }
 
+// hover effect used for mobile
 .front:hover,
 .front.hover_effect {
-  box-shadow: 0px 0px 114px 0px rgba(0, 0, 0, 0.2),
-    0px 30px 25px 0px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 0px 114px 0px rgba(0, 0, 0, 0.2), 0px 30px 25px 0px rgba(0, 0, 0, 0.05);
   transform: translateY(-5px);
 }
 
 .hover {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
+  cursor: pointer;
 }
 
 .front:hover .back {
@@ -254,10 +248,10 @@ footer a {
     width: 120px;
   }
   footer {
-    position: absolute;
-    bottom: 40px;
-    left: 50%;
-    transform: translate(-50%);
+    // position: absolute;
+    // bottom: 40px;
+    // left: 50%;
+    // transform: translate(-50%);
   }
 }
 
@@ -266,7 +260,7 @@ footer a {
   max-width: 550px;
   color: #f6a79a;
   text-align: center;
-  margin: 25vh auto;
+  margin: 20vh auto;
   a {
     color: $light-baby-blue;
     text-decoration: none;
@@ -288,257 +282,237 @@ footer a {
     cursor: pointer;
   }
   .about-page nav img {
-    width: 90px;
+    width: 80px;
   }
   .logo img {
     width: 210px;
   }
   .about-content {
-    margin: 25vh auto 0px;
+    margin: 20vh auto 0px;
   }
 }
 
 /* Colors */
 
-.front-1 {
-  background-color: $light-teal;
-  color: $dark-teal;
-  .back {
-    color: $light-teal;
-    background-color: $dark-teal;
-  }
-}
-
-.front-2 {
-  background-color: $light-salmone;
-  color: $dark-salmon;
-  .back {
-    color: $light-salmone;
-    background-color: $dark-salmon;
-  }
-}
-.front-3 {
-  background-color: $light-slate;
-  color: $dark-slate;
-  .back {
-    color: $light-slate;
-    background-color: $dark-slate;
-  }
-}
-.front-4 {
-  background-color: $sun-white;
-  color: $sun-yellow;
-  .back {
-    color: $sun-white;
-    background-color: $sun-yellow;
-  }
-}
-
-.front-5 {
-  background-color: $light-violet;
-  color: $dark-violet;
-  .back {
-    color: $light-violet;
-    background-color: $dark-violet;
-  }
-}
-
-.front-6 {
-  background-color: $light-grey-green;
-  color: $dark-grey-green;
-  .back {
-    color: $light-grey-green;
-    background-color: $dark-grey-green;
-  }
-}
-.front-7 {
-  background-color: $light-baby-blue;
-  color: $dark-baby-blue;
-  .back {
-    color: $light-baby-blue;
-    background-color: $dark-baby-blue;
-  }
-}
-
-.front-8 {
-  background-color: $pink-pale;
-  color: $pink-dusty;
-  .back {
-    color: $pink-pale;
-    background-color: $pink-dusty;
-  }
-}
-.front-9 {
-  background-color: $light-tan;
-  color: $dark-tan;
-  .back {
-    color: $light-tan;
-    background-color: $dark-tan;
-  }
-}
-
-.front-10 {
-  background-color: $light-earth;
-  color: $earth;
-  .back {
-    color: $light-earth;
-    background-color: $earth;
-  }
-}
-.front-11 {
-  background-color: $faded-pink;
-  color: $dusty-pink;
-  .back {
-    color: $faded-pink;
-    background-color: $dusty-pink;
-  }
-}
-
-.front-12 {
-  background-color: $light-forest;
-  color: $forest;
-  .back {
-    color: $light-forest;
-    background-color: $forest;
-  }
-}
-
-.front-13 {
-  background-color: $greyblue;
-  color: $dark-greyblue;
-  .back {
-    color: $greyblue;
-    background-color: $dark-greyblue;
-  }
-}
-
-.front-14 {
-  background-color: $pale-grey-blue;
-  color: $dark-grey-blue;
-  .back {
-    color: $pale-grey-blue;
-    background-color: $dark-grey-blue;
-  }
-}
-
-.front-15 {
-  background-color: $light-terracotta;
-  color: $dark-terracotta;
-  .back {
-    color: $light-terracotta;
-    background-color: $dark-terracotta;
-  }
-}
-
-.front-16 {
-  background-color: $silver-grey;
-  color: $dark-silver-grey;
-  .back {
-    color: $silver-grey;
-    background-color: $dark-silver-grey;
-  }
-}
-
-.front-17 {
-  background-color: $pale-salmon;
-  color: $dark-pale-salmon;
-  .back {
-    color: $pale-salmon;
-    background-color: $dark-pale-salmon;
-  }
-}
-.front-18 {
-  background-color: $light-sand;
-  color: $sand;
-  .back {
-    color: $light-sand;
-    background-color: $sand;
-  }
-}
-
-.front-19 {
-  background-color: $light-slate-grey;
-  color: $slate-grey;
-  .back {
-    color: $light-slate-grey;
-    background-color: $slate-grey;
-  }
-}
-
-.front-20 {
-  background-color: $light-pinkish-tan;
-  color: $pinkish-tan;
-  .back {
-    color: $light-pinkish-tan;
-    background-color: $pinkish-tan;
-  }
-}
-.front-21 {
-  background-color: $light-dusk;
-  color: $dusk-blue;
-  .back {
-    color: $light-dusk;
-    background-color: $dusk-blue;
-  }
-}
-.front-22 {
-  background-color: $light-grey-teal;
-  color: $grey-teal;
-  .back {
-    color: $light-grey-teal;
-    background-color: $grey-teal;
-  }
-}
-.front-23 {
-  background-color: $peach;
-  color: $dark-peach;
-  .back {
-    color: $peach;
-    background-color: $dark-peach;
-  }
-}
-
-.front-24 {
-  background-color: $dusty-rose;
-  color: $dark-rose;
-  .back {
-    color: $dusty-rose;
-    background-color: $dark-rose;
-  }
-}
-
-.front-25 {
-  background-color: $light-marigold;
-  color: $marigold;
-  .back {
-    color: $light-marigold;
-    background-color: $marigold;
-  }
-}
-
-.front-26 {
-  background-color: $pale-mauve;
-  color: $light-mauve;
-  .back {
-    color: $pale-mauve;
-    background-color: $light-mauve;
-  }
-}
-
-.front-27 {
-  background-color: $perrywinkle;
-  color: $dark-perrywikle;
-  .back {
-    color: $perrywinkle;
-    background-color: $dark-perrywikle;
-  }
-}
-
-.front-28 {
-  background-color: $light-mushroom;
-  color: $mushroom;
-  .back {
-    color: $light-mushroom;
-    background-color: $mushroom;
-  }
-}
+// .front-1 {
+//   background-color: $light-teal;
+//   color: $dark-teal;
+//   .back {
+//     color: $light-teal;
+//     background-color: $dark-teal;
+//   }
+// }
+// .front-2 {
+//   background-color: $light-salmone;
+//   color: $dark-salmon;
+//   .back {
+//     color: $light-salmone;
+//     background-color: $dark-salmon;
+//   }
+// }
+// .front-3 {
+//   background-color: $light-tan;
+//   color: $dark-tan;
+//   .back {
+//     color: $light-tan;
+//     background-color: $dark-tan;
+//   }
+// }
+// // .front-3 {
+// //   background-color: $light-slate;
+// //   color: $dark-slate;
+// //   .back {
+// //     color: $light-slate;
+// //     background-color: $dark-slate;
+// //   }
+// // }
+// .front-4 {
+//   background-color: $sun-white;
+//   color: $sun-yellow;
+//   .back {
+//     color: $sun-white;
+//     background-color: $sun-yellow;
+//   }
+// }
+// .front-5 {
+//   background-color: $light-violet;
+//   color: $dark-violet;
+//   .back {
+//     color: $light-violet;
+//     background-color: $dark-violet;
+//   }
+// }
+// .front-6 {
+//   background-color: $light-grey-green;
+//   color: $dark-grey-green;
+//   .back {
+//     color: $light-grey-green;
+//     background-color: $dark-grey-green;
+//   }
+// }
+// .front-7 {
+//   background-color: $light-baby-blue;
+//   color: $dark-baby-blue;
+//   .back {
+//     color: $light-baby-blue;
+//     background-color: $dark-baby-blue;
+//   }
+// }
+// .front-8 {
+//   background-color: $pink-pale;
+//   color: $pink-dusty;
+//   .back {
+//     color: $pink-pale;
+//     background-color: $pink-dusty;
+//   }
+// }
+// .front-9 {
+//   background-color: $light-marigold;
+//   color: $marigold;
+//   .back {
+//     color: $light-marigold;
+//     background-color: $marigold;
+//   }
+// }
+// .front-10 {
+//   background-color: $light-earth;
+//   color: $earth;
+//   .back {
+//     color: $light-earth;
+//     background-color: $earth;
+//   }
+// }
+// .front-11 {
+//   background-color: $faded-pink;
+//   color: $dusty-pink;
+//   .back {
+//     color: $faded-pink;
+//     background-color: $dusty-pink;
+//   }
+// }
+// .front-12 {
+//   background-color: $light-forest;
+//   color: $forest;
+//   .back {
+//     color: $light-forest;
+//     background-color: $forest;
+//   }
+// }
+// .front-13 {
+//   background-color: $perrywinkle;
+//   color: $dark-perrywikle;
+//   .back {
+//     color: $perrywinkle;
+//     background-color: $dark-perrywikle;
+//   }
+// }
+// // background-color: $greyblue;
+// // color: $dark-greyblue;
+// // .back {
+// //   color: $greyblue;
+// //   background-color: $dark-greyblue;
+// // }
+// .front-14 {
+//   background-color: $pale-grey-blue;
+//   color: $dark-grey-blue;
+//   .back {
+//     color: $pale-grey-blue;
+//     background-color: $dark-grey-blue;
+//   }
+// }
+// .front-15 {
+//   background-color: $light-terracotta;
+//   color: $dark-terracotta;
+//   .back {
+//     color: $light-terracotta;
+//     background-color: $dark-terracotta;
+//   }
+// }
+// .front-16 {
+//   background-color: $silver-grey;
+//   color: $dark-silver-grey;
+//   .back {
+//     color: $silver-grey;
+//     background-color: $dark-silver-grey;
+//   }
+// }
+// .front-17 {
+//   background-color: $pale-salmon;
+//   color: $dark-pale-salmon;
+//   .back {
+//     color: $pale-salmon;
+//     background-color: $dark-pale-salmon;
+//   }
+// }
+// .front-18 {
+//   background-color: $light-sand;
+//   color: $sand;
+//   .back {
+//     color: $light-sand;
+//     background-color: $sand;
+//   }
+// }
+// .front-19 {
+//   background-color: $light-slate-grey;
+//   color: $slate-grey;
+//   .back {
+//     color: $light-slate-grey;
+//     background-color: $slate-grey;
+//   }
+// }
+// .front-20 {
+//   background-color: $light-pinkish-tan;
+//   color: $pinkish-tan;
+//   .back {
+//     color: $light-pinkish-tan;
+//     background-color: $pinkish-tan;
+//   }
+// }
+// .front-21 {
+//   background-color: $light-dusk;
+//   color: $dusk-blue;
+//   .back {
+//     color: $light-dusk;
+//     background-color: $dusk-blue;
+//   }
+// }
+// .front-22 {
+//   background-color: $light-grey-teal;
+//   color: $grey-teal;
+//   .back {
+//     color: $light-grey-teal;
+//     background-color: $grey-teal;
+//   }
+// }
+// .front-23 {
+//   background-color: $peach;
+//   color: $dark-peach;
+//   .back {
+//     color: $peach;
+//     background-color: $dark-peach;
+//   }
+// }
+// .front-24 {
+//   background-color: $dusty-rose;
+//   color: $dark-rose;
+//   .back {
+//     color: $dusty-rose;
+//     background-color: $dark-rose;
+//   }
+// }
+// .front-26 {
+//   background-color: $pale-mauve;
+//   color: $light-mauve;
+//   .back {
+//     color: $pale-mauve;
+//     background-color: $light-mauve;
+//   }
+// }
+// .front-28 {
+//   background-color: $light-mushroom;
+//   color: $mushroom;
+//   .back {
+//     color: $light-mushroom;
+//     background-color: $mushroom;
+//   }
+// }
