--- a/css/style.scss
+++ b/css/style.scss
@@ -294,225 +294,182 @@ footer a {
 
 /* Colors */
 
-// .front-1 {
-//   background-color: $light-teal;
-//   color: $dark-teal;
-//   .back {
-//     color: $light-teal;
-//     background-color: $dark-teal;
-//   }
-// }
-// .front-2 {
-//   background-color: $light-salmone;
-//   color: $dark-salmon;
-//   .back {
-//     color: $light-salmone;
-//     background-color: $dark-salmon;
-//   }
-// }
-// .front-3 {
-//   background-color: $light-tan;
-//   color: $dark-tan;
-//   .back {
-//     color: $light-tan;
-//     background-color: $dark-tan;
-//   }
-// }
-// // .front-3 {
-// //   background-color: $light-slate;
-// //   color: $dark-slate;
-// //   .back {
-// //     color: $light-slate;
-// //     background-color: $dark-slate;
-// //   }
-// // }
-// .front-4 {
-//   background-color: $sun-white;
-//   color: $sun-yellow;
-//   .back {
-//     color: $sun-white;
-//     background-color: $sun-yellow;
-//   }
-// }
-// .front-5 {
-//   background-color: $light-violet;
-//   color: $dark-violet;
-//   .back {
-//     color: $light-violet;
-//     background-color: $dark-violet;
-//   }
-// }
-// .front-6 {
-//   background-color: $light-grey-green;
-//   color: $dark-grey-green;
-//   .back {
-//     color: $light-grey-green;
-//     background-color: $dark-grey-green;
-//   }
-// }
-// .front-7 {
-//   background-color: $light-baby-blue;
-//   color: $dark-baby-blue;
-//   .back {
-//     color: $light-baby-blue;
-//     background-color: $dark-baby-blue;
-//   }
-// }
-// .front-8 {
-//   background-color: $pink-pale;
-//   color: $pink-dusty;
-//   .back {
-//     color: $pink-pale;
-//     background-color: $pink-dusty;
-//   }
-// }
-// .front-9 {
-//   background-color: $light-marigold;
-//   color: $marigold;
-//   .back {
-//     color: $light-marigold;
-//     background-color: $marigold;
-//   }
-// }
-// .front-10 {
-//   background-color: $light-earth;
-//   color: $earth;
-//   .back {
-//     color: $light-earth;
-//     background-color: $earth;
-//   }
-// }
-// .front-11 {
-//   background-color: $faded-pink;
-//   color: $dusty-pink;
-//   .back {
-//     color: $faded-pink;
-//     background-color: $dusty-pink;
-//   }
-// }
-// .front-12 {
-//   background-color: $light-forest;
-//   color: $forest;
-//   .back {
-//     color: $light-forest;
-//     background-color: $forest;
-//   }
-// }
-// .front-13 {
-//   background-color: $perrywinkle;
-//   color: $dark-perrywikle;
-//   .back {
-//     color: $perrywinkle;
-//     background-color: $dark-perrywikle;
-//   }
-// }
-// // background-color: $greyblue;
-// // color: $dark-greyblue;
-// // .back {
-// //   color: $greyblue;
-// //   background-color: $dark-greyblue;
-// // }
-// .front-14 {
-//   background-color: $pale-grey-blue;
-//   color: $dark-grey-blue;
-//   .back {
-//     color: $pale-grey-blue;
-//     background-color: $dark-grey-blue;
-//   }
-// }
-// .front-15 {
-//   background-color: $light-terracotta;
-//   color: $dark-terracotta;
-//   .back {
-//     color: $light-terracotta;
-//     background-color: $dark-terracotta;
-//   }
-// }
-// .front-16 {
-//   background-color: $silver-grey;
-//   color: $dark-silver-grey;
-//   .back {
-//     color: $silver-grey;
-//     background-color: $dark-silver-grey;
-//   }
-// }
-// .front-17 {
-//   background-color: $pale-salmon;
-//   color: $dark-pale-salmon;
-//   .back {
-//     color: $pale-salmon;
-//     background-color: $dark-pale-salmon;
-//   }
-// }
-// .front-18 {
-//   background-color: $light-sand;
-//   color: $sand;
-//   .back {
-//     color: $light-sand;
-//     background-color: $sand;
-//   }
-// }
-// .front-19 {
-//   background-color: $light-slate-grey;
-//   color: $slate-grey;
-//   .back {
-//     color: $light-slate-grey;
-//     background-color: $slate-grey;
-//   }
-// }
-// .front-20 {
-//   background-color: $light-pinkish-tan;
-//   color: $pinkish-tan;
-//   .back {
-//     color: $light-pinkish-tan;
-//     background-color: $pinkish-tan;
-//   }
-// }
-// .front-21 {
-//   background-color: $light-dusk;
-//   color: $dusk-blue;
-//   .back {
-//     color: $light-dusk;
-//     background-color: $dusk-blue;
-//   }
-// }
-// .front-22 {
-//   background-color: $light-grey-teal;
-//   color: $grey-teal;
-//   .back {
-//     color: $light-grey-teal;
-//     background-color: $grey-teal;
-//   }
-// }
-// .front-23 {
-//   background-color: $peach;
-//   color: $dark-peach;
-//   .back {
-//     color: $peach;
-//     background-color: $dark-peach;
-//   }
-// }
-// .front-24 {
-//   background-color: $dusty-rose;
-//   color: $dark-rose;
-//   .back {
-//     color: $dusty-rose;
-//     background-color: $dark-rose;
-//   }
-// }
-// .front-26 {
-//   background-color: $pale-mauve;
-//   color: $light-mauve;
-//   .back {
-//     color: $pale-mauve;
-//     background-color: $light-mauve;
-//   }
-// }
-// .front-28 {
-//   background-color: $light-mushroom;
-//   color: $mushroom;
-//   .back {
-//     color: $light-mushroom;
-//     background-color: $mushroom;
-//   }
-// }
+.front-1 {
+  background-color: $dusty-rose;
+  color: $dark-rose;
+  .back {
+    color: $dusty-rose;
+    background-color: $dark-rose;
+  }
+}
+
+.front-2 {
+  background-color: $light-salmone;
+  color: $dark-salmon;
+  .back {
+    color: $light-salmone;
+    background-color: $dark-salmon;
+  }
+}
+
+.front-3 {
+  background-color: $light-tan;
+  color: $dark-tan;
+  .back {
+    color: $light-tan;
+    background-color: $dark-tan;
+  }
+}
+
+.front-4 {
+  background-color: $sun-white;
+  color: $sun-yellow;
+  .back {
+    color: $sun-white;
+    background-color: $sun-yellow;
+  }
+}
+
+.front-5 {
+  background-color: $pink-pale;
+  color: $pink-dusty;
+  .back {
+    color: $pink-pale;
+    background-color: $pink-dusty;
+  }
+}
+
+.front-6 {
+  background-color: $light-violet;
+  color: $dark-violet;
+  .back {
+    color: $light-violet;
+    background-color: $dark-violet;
+  }
+}
+
+.front-7 {
+  background-color: $light-baby-blue;
+  color: $dark-baby-blue;
+  .back {
+    color: $light-baby-blue;
+    background-color: $dark-baby-blue;
+  }
+}
+
+.front-8 {
+  background-color: $light-grey-green;
+  color: $dark-grey-green;
+  .back {
+    color: $light-grey-green;
+    background-color: $dark-grey-green;
+  }
+}
+
+.front-9 {
+  background-color: $light-marigold;
+  color: $marigold;
+  .back {
+    color: $light-marigold;
+    background-color: $marigold;
+  }
+}
+
+.front-10 {
+  background-color: $pale-mauve;
+  color: $light-mauve;
+  .back {
+    color: $pale-mauve;
+    background-color: $light-mauve;
+  }
+}
+
+.front-11 {
+  background-color: $faded-pink;
+  color: $dusty-pink;
+  .back {
+    color: $faded-pink;
+    background-color: $dusty-pink;
+  }
+}
+
+.front-12 {
+  background-color: $perrywinkle;
+  color: $dark-perrywikle;
+  .back {
+    color: $perrywinkle;
+    background-color: $dark-perrywikle;
+  }
+}
+
+.front-13 {
+  background-color: $light-dusk;
+  color: $dusk-blue;
+  .back {
+    color: $light-dusk;
+    background-color: $dusk-blue;
+  }
+}
+
+.front-14 {
+  background-color: $pale-grey-blue;
+  color: $dark-grey-blue;
+  .back {
+    color: $pale-grey-blue;
+    background-color: $dark-grey-blue;
+  }
+}
+
+.front-15 {
+  background-color: $light-teal;
+  color: $dark-teal;
+  .back {
+    color: $light-teal;
+    background-color: $dark-teal;
+  }
+}
+
+.front-16 {
+  background-color: $light-sand;
+  color: $sand;
+  .back {
+    color: $light-sand;
+    background-color: $sand;
+  }
+}
+
+.front-17 {
+  background-color: $light-grey-teal;
+  color: $grey-teal;
+  .back {
+    color: $light-grey-teal;
+    background-color: $grey-teal;
+  }
+}
+
+.front-18 {
+  background-color: $silver-grey;
+  color: $dark-silver-grey;
+  .back {
+    color: $silver-grey;
+    background-color: $dark-silver-grey;
+  }
+}
+
+.front-19 {
+  background-color: $light-pinkish-tan;
+  color: $pinkish-tan;
+  .back {
+    color: $light-pinkish-tan;
+    background-color: $pinkish-tan;
+  }
+}
+
+.front-20 {
+  background-color: $light-terracotta;
+  color: $dark-terracotta;
+  .back {
+    color: $light-terracotta;
+    background-color: $dark-terracotta;
+  }
+}
