--- a/css/style.css
+++ b/css/style.css
@@ -208,4 +208,203 @@ footer a {
 }
 
 /* Colors */
+.front-1 {
+  background-color: #cc8f9c;
+  color: #a84354;
+}
+
+.front-1 .back {
+  color: #cc8f9c;
+  background-color: #a84354;
+}
+
+.front-2 {
+  background-color: #ffc2b3;
+  color: #cb6b52;
+}
+
+.front-2 .back {
+  color: #ffc2b3;
+  background-color: #cb6b52;
+}
+
+.front-3 {
+  background-color: #fbdcb6;
+  color: #e09a43;
+}
+
+.front-3 .back {
+  color: #fbdcb6;
+  background-color: #e09a43;
+}
+
+.front-4 {
+  background-color: #fffcde;
+  color: #ffe019;
+}
+
+.front-4 .back {
+  color: #fffcde;
+  background-color: #ffe019;
+}
+
+.front-5 {
+  background-color: #ffd4d5;
+  color: #cf6e72;
+}
+
+.front-5 .back {
+  color: #ffd4d5;
+  background-color: #cf6e72;
+}
+
+.front-6 {
+  background-color: #d5cdf1;
+  color: #7263a6;
+}
+
+.front-6 .back {
+  color: #d5cdf1;
+  background-color: #7263a6;
+}
+
+.front-7 {
+  background-color: #99d5ff;
+  color: #45a3e6;
+}
+
+.front-7 .back {
+  color: #99d5ff;
+  background-color: #45a3e6;
+}
+
+.front-8 {
+  background-color: #c1e6d0;
+  color: #6b997e;
+}
+
+.front-8 .back {
+  color: #c1e6d0;
+  background-color: #6b997e;
+}
+
+.front-9 {
+  background-color: #fcf0cc;
+  color: #fdbd02;
+}
+
+.front-9 .back {
+  color: #fcf0cc;
+  background-color: #fdbd02;
+}
+
+.front-10 {
+  background-color: #f4eaed;
+  color: #b9a2a9;
+}
+
+.front-10 .back {
+  color: #f4eaed;
+  background-color: #b9a2a9;
+}
+
+.front-11 {
+  background-color: #e3bfcb;
+  color: #966072;
+}
+
+.front-11 .back {
+  color: #e3bfcb;
+  background-color: #966072;
+}
+
+.front-12 {
+  background-color: #a8afe7;
+  color: #6b73ab;
+}
+
+.front-12 .back {
+  color: #a8afe7;
+  background-color: #6b73ab;
+}
+
+.front-13 {
+  background-color: #abcaef;
+  color: #254a94;
+}
+
+.front-13 .back {
+  color: #abcaef;
+  background-color: #254a94;
+}
+
+.front-14 {
+  background-color: #bfe6ff;
+  color: #6b8799;
+}
+
+.front-14 .back {
+  color: #bfe6ff;
+  background-color: #6b8799;
+}
+
+.front-15 {
+  background-color: #d8f9f8;
+  color: #549492;
+}
+
+.front-15 .back {
+  color: #d8f9f8;
+  background-color: #549492;
+}
+
+.front-16 {
+  background-color: #ffe7a6;
+  color: #e6c670;
+}
+
+.front-16 .back {
+  color: #ffe7a6;
+  background-color: #e6c670;
+}
+
+.front-17 {
+  background-color: #bae1db;
+  color: #598d85;
+}
+
+.front-17 .back {
+  color: #bae1db;
+  background-color: #598d85;
+}
+
+.front-18 {
+  background-color: #c4cee2;
+  color: #6d727d;
+}
+
+.front-18 .back {
+  color: #c4cee2;
+  background-color: #6d727d;
+}
+
+.front-19 {
+  background-color: #fadede;
+  color: #e6968c;
+}
+
+.front-19 .back {
+  color: #fadede;
+  background-color: #e6968c;
+}
+
+.front-20 {
+  background-color: #fcaf97;
+  color: #b36e59;
+}
+
+.front-20 .back {
+  color: #fcaf97;
+  background-color: #b36e59;
+}
 /*# sourceMappingURL=style.css.map */
