--- a/css/style.css
+++ b/css/style.css
@@ -110,25 +110,14 @@ nav img {
   text-align: right;
 }
 
-.front:hover,
-.front.hover_effect {
+.front:hover {
   -webkit-box-shadow: 0px 0px 114px 0px rgba(0, 0, 0, 0.2), 0px 30px 25px 0px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 0px 114px 0px rgba(0, 0, 0, 0.2), 0px 30px 25px 0px rgba(0, 0, 0, 0.05);
   -webkit-transform: translateY(-5px);
           transform: translateY(-5px);
 }
 
-.hover {
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
-  cursor: pointer;
-}
-
 .front:hover .back {
-  opacity: 1;
-}
-
-.front.hover_effect .back {
   opacity: 1;
 }
 
@@ -209,13 +198,13 @@ footer a {
 
 /* Colors */
 .front-1 {
-  background-color: #cc8f9c;
-  color: #a84354;
+  background-color: #E6A1A1;
+  color: #B35959;
 }
 
 .front-1 .back {
-  color: #cc8f9c;
-  background-color: #a84354;
+  color: #E6A1A1;
+  background-color: #B35959;
 }
 
 .front-2 {
