--- a/css/style.scss
+++ b/css/style.scss
@@ -1,61 +1,11 @@
 @import "../node_modules/normalize.css/normalize.css";
 // Colours:
-// $light-sea: #d8f9f8;
-// $sea: #36968d;
-// $dark-salmon: #cb6b52;
-// $pink-beige: #dac3b6;
-// $light-beige: #faf9f7;
-// $light-sage: #cfe8d3;
-// $dark-sage: #528065;
-// $marigold-salmon: #fdbd02;
-// $salmon-marigold: #f57e6c;
-// $kahki-sand: #f8eecb;
-// $sky-sand-grey: #d2edff;
-// $sand-sky-kahki: #d3a05c;
-// $blush: #f6a79a;
-// $dark: #262c44;
-// $green-salmon: #6b784a;
-// $salmon-green: #e8aea2;
-// $grey-sky: #c4cee2;
-// $navy-beige: #293a65;
-// $beige-navy: #e7c4a2;
-// $maize: #fad543;
-// $light-maize: #fdfdeb;
-// $lilac-violet: #efe8ff;
-// $violet-lilac: #60548c;
-// $rouge-rose: #94122f;
-// $rose-rouge: #fbd7cb;
-// $pink-steel: #fda287;
-// $steel-pink: #7f868e;
-// $peach-sand: #d88e5f;
-// $sand-peach: #e8e1ce;
-// $slate-mauve: #44475e;
-// $mauve-slate: #cabec2;
-// $baby-blue: #9ed6ff;
-// $baby-pink: #ffe8e3;
-// $cobalt-silver: #1d3774;
-// $silver-cobolt: #cedadd;
-// $ice-marigold: #d9fffa;
-// $green-grey: #dceedc;
-// $grey-green: #92b2bc;
-// $sand-wine: #fbdcb6;
-// $wine-sand: #74233e;
-// $green-blue: #145c60;
-// $blue-green: #d7e7e2;
-// $baby-rose: #f5e3d7;
-// $rose-baby: #cf6e72;
-// $dusk-dirt: #505b79;
-// $dirt-dusk: #cc9c3f;
-// $pink-dust: #e3afa9;
-// $dust-pink: #c6701f;
 $light-teal: #d8f9f8;
 $dark-teal: #549492;
 $light-salmone: #ffc2b3;
 $dark-salmon: #cb6b52;
 $sun-white: #fffcde;
 $sun-yellow: #ffe019;
-$light-slate: #8d9fcc;
-$dark-slate: #213873;
 $light-violet: #d5cdf1;
 $dark-violet: #7263a6;
 $light-grey-green: #c1e6d0;
@@ -66,34 +16,24 @@ $pink-pale: #ffd4d5;
 $pink-dusty: #cf6e72;
 $light-tan: #fbdcb6;
 $dark-tan: #e09a43;
-$light-earth: #dac3b6;
-$earth: #a66a47;
 $light-terracotta: #fcaf97;
 $dark-terracotta: #b36e59;
-$light-forest: #89c69a;
-$forest: #3d7b4e;
 $faded-pink: #e3bfcb;
 $dusty-pink: #966072;
 $pale-grey-blue: #bfe6ff;
 $dark-grey-blue: #6b8799;
-$dusty-rose: #cc8f9c;
-$dark-rose: #a84354;
+$dusty-rose: #E6A1A1;
+$dark-rose: #B35959;
 $silver-grey: #c4cee2;
 $dark-silver-grey: #6d727d;
-$pale-salmon: #ffaea2;
-$dark-pale-salmon: #c26253;
 $light-sand: #ffe7a6;
 $sand: #e6c670;
-$light-slate-grey: #cedadd;
-$slate-grey: #607378;
 $light-pinkish-tan: #fadede;
 $pinkish-tan: #e6968c;
 $light-dusk: #abcaef;
 $dusk-blue: #254a94;
 $light-grey-teal: #bae1db;
 $grey-teal: #598d85;
-$peach: #ffd6bd;
-$dark-peach: #d88e5f;
 $greyblue: #7db1b3;
 $dark-greyblue: #1f6266;
 $light-marigold: #fcf0cc;
@@ -102,8 +42,6 @@ $pale-mauve: #f4eaed;
 $light-mauve: #b9a2a9;
 $perrywinkle: #a8afe7;
 $dark-perrywikle: #6b73ab;
-$light-mushroom: #e7ccc6;
-$mushroom: #b3948d;
 $note-grey: #888d9c;
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -195,26 +133,28 @@ nav img {
 }
 
 // hover effect used for mobile
-.front:hover,
-.front.hover_effect {
+// .front:hover,
+// .front.hover_effect {
+//   box-shadow: 0px 0px 114px 0px rgba(0, 0, 0, 0.2), 0px 30px 25px 0px rgba(0, 0, 0, 0.05);
+//   transform: translateY(-5px);
+// }
+.front:hover {
   box-shadow: 0px 0px 114px 0px rgba(0, 0, 0, 0.2), 0px 30px 25px 0px rgba(0, 0, 0, 0.05);
   transform: translateY(-5px);
 }
 
-.hover {
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
-  cursor: pointer;
-}
-
+// .hover {
+//   -webkit-user-select: none;
+//   -webkit-touch-callout: none;
+//   cursor: pointer;
+// }
 .front:hover .back {
   opacity: 1;
 }
 
-.front.hover_effect .back {
-  opacity: 1;
-}
-
+// .front.hover_effect .back {
+//   opacity: 1;
+// }
 .intro {
   text-align: center;
   color: $note-grey;
@@ -246,12 +186,6 @@ footer a {
   background: #ffeae7;
   nav img {
     width: 120px;
-  }
-  footer {
-    // position: absolute;
-    // bottom: 40px;
-    // left: 50%;
-    // transform: translate(-50%);
   }
 }
 
